--- a/public/play/index.html
+++ b/public/play/index.html
@@ -305,35 +305,52 @@
 </footer>
 
 <script>
-    // 定义解析接口数组
-    var BUILTIN_APIS = [
-        {name: "七哥", url: "https://jx.nnxv.cn/tv.php?url="},
-        {name: "虾米", url: "https://jx.xmflv.cc/?url="},
-        {name: "8090", url: "https://www.8090g.cn/?url="},
-        {name: "剖元", url: "https://www.pouyun.com/?url="},
-        {name: "爱豆", url: "https://jx.aidouer.net/?url="},
-        {name: "M3U8.TV", url: "https://jx.m3u8.tv/jiexi/?url="},
-        {name: "纯净", url: "https://im1907.top/?jx="},
-        {name: "OK解析", url: "https://okjx.cc/?url="},
-        {name: "冰豆(新)", url: "https://api.qianqi.net/vip/?url="},
-        {name: "JY解析", url: "https://jx.playerjy.com/?url="},
-        {name: "百域", url: "https://jx.618g.com/?url="},
-        {name: "CK", url: "https://www.ckplayer.vip/jiexi/?url="},
-        {name: "PM", url: "https://www.playm3u8.cn/jiexi.php?url="},
-        {name: "盘古", url: "https://www.pangujiexi.cc/jiexi.php?url="}
-    ];
+    // 动态解析接口（来自后台官方推荐接口）
+    var BUILTIN_APIS = [];
 
     // 页面加载完成后渲染解析接口选项
-    document.addEventListener('DOMContentLoaded', function() {
+    function getUserToken() {
+        return localStorage.getItem("userToken") || "";
+    }
+
+    function renderApiOptions(list) {
         var selectElement = document.getElementById('jk');
-        
-        // 遍历API数组并添加选项
-        BUILTIN_APIS.forEach(function(api, index) {
+        if (!selectElement) return;
+        selectElement.innerHTML = '<option value="">请选择解析接口</option>';
+        list.forEach(function(api, index) {
             var option = document.createElement('option');
-            option.value = index; // 使用数组索引作为值
+            option.value = index;
             option.textContent = api.name;
             selectElement.appendChild(option);
         });
+    }
+
+    async function loadParseApis() {
+        try {
+            var res = await fetch('/parse-apis');
+            var data = await res.json();
+            if (data && data.code === 200 && Array.isArray(data.data)) {
+                BUILTIN_APIS = data.data
+                    .map(function(item){ return { name: item.name, url: item.url }; });
+                renderApiOptions(BUILTIN_APIS);
+            } else {
+                Swal.fire({
+                    icon: 'error',
+                    title: '提示',
+                    text: data.message || '获取解析接口失败'
+                });
+            }
+        } catch (e) {
+            Swal.fire({
+                icon: 'error',
+                title: '提示',
+                text: '获取解析接口失败'
+            });
+        }
+    }
+
+    document.addEventListener('DOMContentLoaded', function() {
+        loadParseApis();
     });
 
     // 获取URL中的参数
@@ -344,7 +361,9 @@
     var inputValue = urlParams.get("url");
     if (inputValue !== null) {
         urlInput.value = inputValue;
-        dihejk();
+        setTimeout(function() {
+            dihejk();
+        }, 300);
     }
 
     // 获取输入框元素
